--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,7 +1,6 @@
 <h1><%= @photo.title %></h1>
-<h1><%= @photo.description %></h1>
 <p><%= @photo.description %></p>
 <td>
   <%= image_tag(@photo.img_url.to_s) %>	
 </td>
-<%= link_to "<< Back to Photos List", photos_path %>
+<p><%= link_to "<< Back to Photos List", photos_path %></p>
