--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -5,7 +5,7 @@
     <li>
       <%= link_to photo.title, photo_path(photo) %>
     </li>
- 		 <%= image_tag(photo.img_url.to_s) %>	
+ 		 <%= image_tag(photo.img_url) %>	
   <% end %>
 </ul>
 
