add tags list; show tags

--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -16,6 +16,10 @@
     <%= f.label :img_url %><br />
     <%= f.text_field :img_url %>
   </div>
+  <div class="field">
+    <%= f.label :tag_list %><br />
+    <%= f.text_field :tag_list %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
