--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -10,3 +10,6 @@
 </ul>
 
 <%= link_to "Create a New Photo", new_photo_path, class: "new_photo" %>
+<p>
+	<%= link_to "Go to Tags List", tags_path %>
+</p>
