--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -1,26 +1,28 @@
 <%= form_for(@photo) do |f| %>
-  <ul>
-  <% @photo.errors.full_messages.each do |error| %>
-    <li><%= error %></li>
-  <% end %>
-  </ul>
-  <div class="field">
-    <%= f.label :title %><br />
-    <%= f.text_field :title %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br />
-    <%= f.text_area :description %>
-  </div>
-  <div class="field">
-    <%= f.label :img_url %><br />
-    <%= f.text_field :img_url %>
-  </div>
-  <div class="field">
-    <%= f.label :tag_list %><br />
-    <%= f.text_field :tag_list %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <div class="form">
+    <ul class="errors">
+    <% @photo.errors.full_messages.each do |error| %>
+      <li><%= error %></li>
+    <% end %>
+    </ul>
+    <div class="field">
+      <%= f.label :title %><br />
+      <%= f.text_field :title %>
+    </div>
+    <div class="field">
+      <%= f.label :description %><br />
+      <%= f.text_area :description %>
+    </div>
+    <div class="field">
+      <%= f.label :img_url %><br />
+      <%= f.text_field :img_url %>
+    </div>
+    <div class="field">
+      <%= f.label :tag_list %><br />
+      <%= f.text_field :tag_list %>
+    </div>
+    <div class="actions">
+      <%= f.submit %>
+    </div>
+  </div>  
 <% end %>
