--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -50,6 +50,7 @@ table {
 	border-spacing: 0;
 }
 
+/*form*/
 .newh1 {
 	padding-top: 1.333em;
 	font-size: 2.333em;
@@ -74,4 +75,42 @@ table {
 }
 .field {
 	padding: 0.133em;
+}
+
+/*nav*/
+ul.topnav {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background-color: #000000;
+}
+ul.topnav li {
+	float: left;
+}
+ul.topnav li a {
+	display: inline-block;
+	color: #FFFFFF;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	transition: 0.3s;
+	font-size: 17px;
+}
+ul.topnav li a:hover {background-color: #555;}
+
+/*photos*/
+.tiles {
+	padding: 1em;
+	margin-top: 1.333em;
+	width: 10em;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 1.777em;
+  box-shadow: 0 0.125em 0.125em 0.0625em #888888;
+}
+
+.tiles img {
+	width: 10em;
+	height: auto;
 }
