--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,10 +1,26 @@
-<h1><%= @photo.title %></h1>
+<h1 class="newh1"><%= @photo.title %></h1>
+
+<nav>
+	<ul class="topnav">		
+		<li class="to_new">
+			<%= link_to "Create a New Photo", new_photo_path, class: "new_photo" %>
+		</li>
+		<li class="to_photo">
+			<%= link_to "Photos List", photos_path %>
+		</li>
+		<li class="to_tag">
+			<%= link_to "Tags List", tags_path %>
+		</li>
+	</ul>
+</nav>
+
+
+<div>
+  <%= image_tag(@photo.img_url) %>	
+</div>
 <p>
 	<%= @photo.description %>
 </p>
-<td>
-  <%= image_tag(@photo.img_url) %>	
-</td>
 <p>
   Tags:
   <% @photo.tags.each do |tag| %>
