--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,4 +1,15 @@
-<h1>All Tags</h1>
+<h1 class="newh1">Tags</h1>
+
+<nav>
+	<ul class="topnav">		
+		<li class="to_new">
+			<%= link_to "Create a New Photo", new_photo_path, class: "new_photo" %>
+		</li>
+		<li class="to_photo">
+			<%= link_to "Photos List", photos_path %>
+		</li>
+	</ul>
+</nav>
 
 <ul id="tags">
   <% @tags.each do |tag| %>
@@ -7,6 +18,3 @@
     </li>
   <% end %>
 </ul>
-<p>
-	<%= link_to "<< Back to Photos List", photos_path %>
-</p>
