--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,14 +1,28 @@
-<h1>Photos Tagged with <%= @tag.name %></h1>
+<h1 class="newh1">Photos Tagged with <%= @tag.name %></h1>
 
-<ul>
+<nav>
+	<ul class="topnav">		
+		<li class="to_new">
+			<%= link_to "Create a New Photo", new_photo_path, class: "new_photo" %>
+		</li>
+		<li class="to_photo">
+			<%= link_to "Photos List", photos_path %>
+		</li>
+		<li class="to_tag">
+			<%= link_to "Tags List", tags_path %>
+		</li>
+	</ul>
+</nav>
+
+<ul id="photos">
   <% @tag.photos.each do |photo| %>
-    <li><%= link_to photo.title, photo_path(photo) %></li>
-    <%= image_tag(photo.img_url) %>
+    <div class="tiles">
+	    <div class="photoimg">
+	    	<%= image_tag(photo.img_url) %>
+	    </div>
+	    <li class="phototitle">
+	      <%= link_to photo.title, photo_path(photo) %>
+	    </li>
+		</div>
   <% end %>
 </ul>
-<p>
-	<%= link_to "<< Back to Photos List", photos_path %>
-</p>
-<p>
-	<%= link_to "<< Back to Tags List", tags_path %>
-</p>
