add style to photos and nav

--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -82,6 +82,7 @@ ul.topnav {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
+	padding-top: 0.333em;
 	overflow: hidden;
 	background-color: #000000;
 }
