--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -3,7 +3,10 @@
 <nav>
 	<ul class="topnav">		
 		<li class="to_new">
-			<%= link_to "Create a New Photo", new_photo_path, class: "new_photo" %>
+			<%= link_to "New Photo", new_photo_path, class: "new_photo" %>
+		</li>
+		<li class="to_photo">
+			<%= link_to "Photos List", photos_path %>
 		</li>
 		<li class="to_tag">
 			<%= link_to "Tags List", tags_path %>
@@ -11,7 +14,7 @@
 	</ul>
 </nav>	
 
-<ul id="photos">
+<ul class="tilebox" id="photos">
   <% @photos.each do |photo| %> 
     <div class="tiles">
 	    <div class="photoimg">
