--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -1,5 +1,8 @@
 <nav>
   <ul class="topnav">   
+    <li class="to_new">
+      <%= link_to "Create a New Photo", new_photo_path, class: "new_photo" %>
+    </li>
     <li class="to_photo">
       <%= link_to "Photos List", photos_path %>
     </li>
