add sexy flexbox

--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -133,6 +133,10 @@ ul.topnav li a:hover {background-color: #555;}
 	font-size: 1.222em;
 }
 
+.photodesc {
+	margin-bottom: 1em;
+}
+
 /*tagshow*/
 .tagbox {
 	display: flex;
