--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -24,7 +24,7 @@
 </div>
 
 <div class="tilebox" id="photos">
-  <div class="tiles">
+  <div class="tiles" id="showp">
     <div class="photoimg">
     	<%= image_tag(@photo.img_url) %>
     </div>
