--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -50,28 +50,34 @@ table {
 	border-spacing: 0;
 }
 
+/*start*/
 /*form*/
 .newh1 {
-	padding-top: 1.333em;
-	font-size: 2.333em;
-	text-align: center;
+	padding-top: 0.333em;
+	font-size: 3.333em;
 	padding-bottom: 0.333em;
+}
+.field input {
+	font-size: 0.5em;
+	width: 10em;
 }
 .form {
 	padding: 1em;
-	margin-top: 1.333em;
+	margin-top: 0.333em;
 	width: 10em;
   margin-left: auto;
   margin-right: auto;
   font-size: 1.777em;
   box-shadow: 0 0.125em 0.125em 0.0625em #888888;
 }
-.actions {
+.actions input {
 	padding-left: 0.133em;
+	font-size: 0.5em;
 }
 .field textarea {
-	width: 20.333em;
-	height: 5.333em;
+	font-size: 0.5em;
+	width: 15em;
+	height: 5em;
 }
 .field {
 	padding: 0.133em;
@@ -82,7 +88,6 @@ ul.topnav {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
-	padding-top: 0.333em;
 	overflow: hidden;
 	background-color: #000000;
 }
@@ -96,7 +101,7 @@ ul.topnav li a {
 	padding: 14px 16px;
 	text-decoration: none;
 	transition: 0.3s;
-	font-size: 17px;
+	font-size: 1.5em;
 }
 ul.topnav li a:hover {background-color: #555;}
 
@@ -110,11 +115,10 @@ ul.topnav li a:hover {background-color: #555;}
 .tiles {
 	padding: 1em;
 	width: 10em;
-	height: 10em;
+	height: auto;
   font-size: 1.777em;
   box-shadow: 0 0.125em 0.125em 0.0625em #888888;
   margin: 1em;
-  position: relative;
 }
 
 .tiles img {
@@ -123,14 +127,16 @@ ul.topnav li a:hover {background-color: #555;}
 }
 
 .phototitle {
-	bottom: 0;
-	position: absolute;
-	margin-bottom: 0.222em;
+	padding-top: 1em;
+	margin-bottom: 0.5em;
+	font-size: 0.7em;
 }
 /*show*/
 .buttonbox {
 	display: flex;
 	justify-content: center;
+	font-size: 2em;
+	background: #FFFFFF;
 }
 
 .buttons {
@@ -142,28 +148,30 @@ ul.topnav li a:hover {background-color: #555;}
 
 .photodesc {
 	margin-bottom: 1em;
+	padding-top: 1em;
+	font-size: 1.333em;
 }
 
 #showp {
 	height: auto;
 }
 
-/*tagshow*/
+/*tagindex*/
 .tagbox {
 	display: flex;
 	justify-content: center;
+	margin-top: 1em;
+	flex-wrap: wrap;
 }
 
 .tags {
 	margin-top: 1em;
 	margin-right: 1em;
 	margin-left: 1em;
-	font-size: 1.222em;
+	font-size: 2em;
 }
 
 .phototag {
-	position: absolute;
-	bottom: 0;
 	margin-bottom: 0.333em;
 }
 /*links*/
@@ -186,3 +194,27 @@ a:active {
   color: #46494C;
   text-decoration: none;
 }
+
+
+@media screen and (min-width: 50em){
+	/*form*/	
+	.newh1 {
+		padding-top: 0.666em;
+		font-size: 3.666em;
+		text-align: center;
+	}
+	.form {
+		margin-top: 1.333em;
+	}
+	.actions {
+		padding-left: 0.133em;
+		padding-top: 0.333em;
+		font-size: 1.333em;
+	}
+
+	/*nav*/
+
+	ul.topnav li a {
+		font-size: 1.777em;
+	}
+}		
