--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -1,13 +1,15 @@
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <nav>
   <ul class="topnav">   
     <li class="to_new">
-      <%= link_to "Create a New Photo", new_photo_path, class: "new_photo" %>
+      <%= link_to "New Photo", new_photo_path, class: "new_photo" %>
     </li>
     <li class="to_photo">
-      <%= link_to "Photos List", photos_path %>
+      <%= link_to "Photos", photos_path %>
     </li>
     <li class="to_tag">
-      <%= link_to "Tags List", tags_path %>
+      <%= link_to "Tags", tags_path %>
     </li>
   </ul>
 </nav>
