--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,3 +1,5 @@
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <h1 class="newh1">Photos</h1>
 
 <nav>
@@ -6,10 +8,10 @@
 			<%= link_to "New Photo", new_photo_path, class: "new_photo" %>
 		</li>
 		<li class="to_photo">
-			<%= link_to "Photos List", photos_path %>
+			<%= link_to "Photos", photos_path %>
 		</li>
 		<li class="to_tag">
-			<%= link_to "Tags List", tags_path %>
+			<%= link_to "Tags", tags_path %>
 		</li>
 	</ul>
 </nav>	
