--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,15 +1,18 @@
-<h1 class="newh1">Photos Tagged with <%= @tag.name %></h1>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<h1 class="newh1">Photos with <%= @tag.name %></h1>
 
 <nav>
 	<ul class="topnav">		
 		<li class="to_new">
 			<%= link_to "New Photo", new_photo_path, class: "new_photo" %>
 		</li>
+		<li>|</li>	
 		<li class="to_photo">
-			<%= link_to "Photos List", photos_path %>
+			<%= link_to "Photos", photos_path %>
 		</li>
 		<li class="to_tag">
-			<%= link_to "Tags List", tags_path %>
+			<%= link_to "Tags", tags_path %>
 		</li>
 	</ul>
 </nav>
