--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -50,62 +50,40 @@ table {
 	border-spacing: 0;
 }
 
-/*start*/
-/*form*/
+//colors
+$color_suva_gray_approx: #888888;
+$black: #000000;
+$white: #ffffff;
+$color_fuscous_gray_approx: #555;
+$color_ebony_clay_approx: #202c39;
+$color_gravel_approx: #46494c;
+
 .newh1 {
 	padding-top: 0.333em;
 	font-size: 3.333em;
 	padding-bottom: 0.333em;
 }
-.field input {
-	font-size: 0.5em;
-	width: 10em;
+.field {
+	padding: 0.133em;
+	input {
+		font-size: 0.5em;
+		width: 10em;
+	}
+	textarea {
+		font-size: 0.5em;
+		width: 15em;
+		height: 5em;
+	}
 }
 .form {
 	padding: 1em;
 	margin-top: 0.333em;
 	width: 10em;
-  margin-left: auto;
-  margin-right: auto;
-  font-size: 1.777em;
-  box-shadow: 0 0.125em 0.125em 0.0625em #888888;
+	margin-left: auto;
+	margin-right: auto;
+	font-size: 1.777em;
+	box-shadow: 0 0.125em 0.125em 0.0625em $color_suva_gray_approx;
 }
-.actions input {
-	padding-left: 0.133em;
-	font-size: 0.5em;
-}
-.field textarea {
-	font-size: 0.5em;
-	width: 15em;
-	height: 5em;
-}
-.field {
-	padding: 0.133em;
-}
-
-/*nav*/
-ul.topnav {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-	background-color: #000000;
-}
-ul.topnav li {
-	float: left;
-}
-ul.topnav li a {
-	display: inline-block;
-	color: #FFFFFF;
-	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
-	transition: 0.3s;
-	font-size: 1.5em;
-}
-ul.topnav li a:hover {background-color: #555;}
-
-/*photos*/
 .tilebox {
 	display: flex;
 	padding-top: 1.333em;
@@ -116,88 +94,74 @@ ul.topnav li a:hover {background-color: #555;}
 	padding: 1em;
 	width: 10em;
 	height: auto;
-  font-size: 1.777em;
-  box-shadow: 0 0.125em 0.125em 0.0625em #888888;
-  margin: 1em;
+	font-size: 1.777em;
+	//Instead of the line below you could use @include box-shadow($shadow-1, $shadow-2, $shadow-3, $shadow-4, $shadow-5, $shadow-6, $shadow-7, $shadow-8, $shadow-9, $shadow-10)
+	box-shadow: 0 0.125em 0.125em 0.0625em $color_suva_gray_approx;
+	margin: 1em;
+	img {
+		width: 10em;
+		height: auto;
+	}
 }
-
-.tiles img {
-	width: 10em;
-	height: auto;
-}
-
 .phototitle {
 	padding-top: 1em;
 	margin-bottom: 0.5em;
 	font-size: 0.7em;
 }
-/*show*/
 .buttonbox {
 	display: flex;
 	justify-content: center;
 	font-size: 2em;
-	background: #FFFFFF;
+	background: $white;
 }
-
 .buttons {
 	margin-top: 1em;
 	margin-right: 1em;
 	margin-left: 1em;
 	font-size: 1.222em;
 }
-
 .photodesc {
 	margin-bottom: 1em;
 	padding-top: 1em;
 	font-size: 1.333em;
 }
-
 #showp {
 	height: auto;
 }
-
-/*tagindex*/
 .tagbox {
 	display: flex;
 	justify-content: center;
 	margin-top: 1em;
 	flex-wrap: wrap;
 }
-
 .tags {
 	margin-top: 1em;
 	margin-right: 1em;
 	margin-left: 1em;
 	font-size: 2em;
 }
-
 .phototag {
 	margin-bottom: 0.333em;
 }
-/*links*/
-a:link {
-  color: #202C39;
-  text-decoration: none;
+a {
+	&:link {
+		color: $color_ebony_clay_approx;
+		text-decoration: none;
+	}
+	&:visited {
+		color: $color_ebony_clay_approx;
+		text-decoration: none;
+	}
+	&:hover {
+		color: $color_gravel_approx;
+		text-decoration: none;
+	}
+	&:active {
+		color: $color_gravel_approx;
+		text-decoration: none;
+	}
 }
-
-a:visited {
-  color: #202C39;
-  text-decoration: none;
-}
-
-a:hover {
-  color: #46494C;
-  text-decoration: none;
-}
-
-a:active {
-  color: #46494C;
-  text-decoration: none;
-}
-
-
-@media screen and (min-width: 50em){
-	/*form*/	
+@media screen and(min-width: 50em) {
 	.newh1 {
 		padding-top: 0.666em;
 		font-size: 3.666em;
@@ -211,10 +175,33 @@ a:active {
 		padding-top: 0.333em;
 		font-size: 1.333em;
 	}
-
-	/*nav*/
-
 	ul.topnav li a {
 		font-size: 1.777em;
 	}
-}		
+}
+.actions input {
+	padding-left: 0.133em;
+	font-size: 0.5em;
+}
+ul.topnav {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background-color: $black;
+	li {
+		float: left;
+		a {
+			display: inline-block;
+			color: $white;
+			text-align: center;
+			padding: 14px 16px;
+			text-decoration: none;
+			transition: 0.3s;
+			font-size: 1.5em;
+			&:hover {
+				background-color: $color_fuscous_gray_approx;
+			}
+		}
+	}
+}	
