--- a/app/views/photos/_form.html.haml
+++ b/app/views/photos/_form.html.haml
@@ -21,12 +21,12 @@
       %br/
       = f.text_area :description
     .field
-      = f.label :img_url
+      = f.label :img_url, "Image URL"
       %br/
       = f.text_field :img_url
     .field
-      = f.label :tag_list
+      = f.label :tag_list, "Tags"
       %br/
-      = f.text_field :tag_list
+      = f.text_field :tag_list, placeholder: "separated with ','"
     .actions
       = f.submit
