--- a/app/views/photos/index.html.haml
+++ b/app/views/photos/index.html.haml
@@ -1,5 +1,11 @@
 !!!
 %h1.newh1 Photos
+.container
+  - flash.each do |key, value|
+    %div{:class => "alert alert-#{key}"}
+      = value
+  = yield
+
 %nav
   %ul.topnav
     %li.to_new
@@ -8,6 +14,11 @@
       = link_to "Photos", photos_path
     %li.to_tag
       = link_to "Tags", tags_path
+    %li.to_log
+      = link_to "Twitter", '/auth/twitter'
+
+    %li.log_out
+      = link_to "Log out", logout_path, method: :delete      
 #photos.tilebox
   - @photos.each do |photo|
     .tiles
