--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -175,33 +175,71 @@ a {
 		padding-top: 0.333em;
 		font-size: 1.333em;
 	}
-	ul.topnav li a {
-		font-size: 1.777em;
-	}
 }
 .actions input {
 	padding-left: 0.133em;
 	font-size: 0.5em;
 }
+/* nav start */
 ul.topnav {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-	background-color: $black;
-	li {
-		float: left;
-		a {
-			display: inline-block;
-			color: $white;
-			text-align: center;
-			padding: 14px 16px;
-			text-decoration: none;
-			transition: 0.3s;
-			font-size: 1.5em;
-			&:hover {
-				background-color: $color_fuscous_gray_approx;
-			}
-		}
-	}
-}	
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #000000;
+}
+ul.topnav li {
+  float: left;
+}
+ul.topnav li a {
+    display: inline-block;
+    color: #FFFFFF;
+    text-align: center;
+    padding: 0.333em 0.333em;
+    text-decoration: none;
+    transition: 0.3s;
+    font-size: 1.777em;
+}
+ul.topnav li a:hover {background-color: #555;}
+ul.topnav li.icon {display: none;}
+
+@media screen and (max-width: 35em) {
+  /* nav start */
+  ul.topnav {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #000000;
+  }
+  ul.topnav li a {
+      display: inline-block;
+      color: #f2f2f2;
+      text-align: center;
+      text-decoration: none;
+      transition: 0.3s;
+      padding: 14px 16px;
+      font-size: 17px;
+  }
+  ul.topnav li {float: left;}
+  ul.topnav li:not(:first-child) {display: none;}
+  ul.topnav li.icon {
+    float: right;
+    display: inline-block;
+  }
+  ul.topnav.responsive {position: relative;}
+  ul.topnav.responsive li.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  ul.topnav.responsive li {
+    float: none;
+    display: inline;
+  }
+  ul.topnav.responsive li a {
+    display: block;
+    text-align: left;
+  }
+  /* nav end */
+}  
