--- a/app/assets/stylesheets/tags.scss
+++ b/app/assets/stylesheets/tags.scss
@@ -1,4 +1,4 @@
-// Place all the styles related to the tags controller here.
+// Place all the styles related to the photos controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 /* http://meyerweb.com/eric/tools/css/reset/ 
@@ -49,3 +49,197 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+//colors
+$color_suva_gray_approx: #888888;
+$black: #000000;
+$white: #ffffff;
+$color_fuscous_gray_approx: #555;
+$color_ebony_clay_approx: #202c39;
+$color_gravel_approx: #46494c;
+
+.newh1 {
+	padding-top: 0.333em;
+	font-size: 3.333em;
+	padding-bottom: 0.333em;
+}
+.field {
+	padding: 0.133em;
+	input {
+		font-size: 0.5em;
+		width: 10em;
+	}
+	textarea {
+		font-size: 0.5em;
+		width: 15em;
+		height: 5em;
+	}
+}
+.form {
+	padding: 1em;
+	margin-top: 0.333em;
+	width: 10em;
+	margin-left: auto;
+	margin-right: auto;
+	font-size: 1.777em;
+	box-shadow: 0 0.125em 0.125em 0.0625em $color_suva_gray_approx;
+}
+.tilebox {
+	display: flex;
+	padding-top: 1.333em;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+.tiles {
+	padding: 1em;
+	width: 10em;
+	height: auto;
+	font-size: 1.777em;
+	//Instead of the line below you could use @include box-shadow($shadow-1, $shadow-2, $shadow-3, $shadow-4, $shadow-5, $shadow-6, $shadow-7, $shadow-8, $shadow-9, $shadow-10)
+	box-shadow: 0 0.125em 0.125em 0.0625em $color_suva_gray_approx;
+	margin: 1em;
+	img {
+		width: 10em;
+		height: auto;
+	}
+}
+.phototitle {
+	padding-top: 1em;
+	margin-bottom: 0.5em;
+	font-size: 0.7em;
+}
+.buttonbox {
+	display: flex;
+	justify-content: center;
+	font-size: 2em;
+	background: $white;
+}
+.buttons {
+	margin-top: 1em;
+	margin-right: 1em;
+	margin-left: 1em;
+	font-size: 1.222em;
+}
+.photodesc {
+	margin-bottom: 1em;
+	padding-top: 1em;
+	font-size: 1.333em;
+}
+#showp {
+	height: auto;
+}
+.tagbox {
+	display: flex;
+	justify-content: center;
+	margin-top: 1em;
+	flex-wrap: wrap;
+}
+.tags {
+	margin-top: 1em;
+	margin-right: 1em;
+	margin-left: 1em;
+	font-size: 2em;
+}
+.phototag {
+	margin-bottom: 0.333em;
+}
+a {
+	&:link {
+		color: $color_ebony_clay_approx;
+		text-decoration: none;
+	}
+	&:visited {
+		color: $color_ebony_clay_approx;
+		text-decoration: none;
+	}
+	&:hover {
+		color: $color_gravel_approx;
+		text-decoration: none;
+	}
+	&:active {
+		color: $color_gravel_approx;
+		text-decoration: none;
+	}
+}
+@media screen and(min-width: 50em) {
+	.newh1 {
+		padding-top: 0.666em;
+		font-size: 3.666em;
+		text-align: center;
+	}
+	.form {
+		margin-top: 1.333em;
+	}
+	.actions {
+		padding-left: 0.133em;
+		padding-top: 0.333em;
+		font-size: 1.333em;
+	}
+}
+.actions input {
+	padding-left: 0.133em;
+	font-size: 0.5em;
+}
+/* nav start */
+ul.topnav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #000000;
+}
+ul.topnav li {
+  float: left;
+}
+ul.topnav li a {
+    display: inline-block;
+    color: #FFFFFF;
+    text-align: center;
+    padding: 0.333em 0.333em;
+    text-decoration: none;
+    transition: 0.3s;
+    font-size: 1.777em;
+}
+ul.topnav li a:hover {background-color: #555;}
+ul.topnav li.icon {display: none;}
+
+@media screen and (max-width: 35em) {
+  /* nav start */
+  ul.topnav {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #000000;
+  }
+  ul.topnav li a {
+      display: inline-block;
+      color: #f2f2f2;
+      text-align: center;
+      text-decoration: none;
+      transition: 0.3s;
+      padding: 14px 16px;
+      font-size: 17px;
+  }
+  ul.topnav li {float: left;}
+  ul.topnav li:not(:first-child) {display: none;}
+  ul.topnav li.icon {
+    float: right;
+    display: inline-block;
+  }
+  ul.topnav.responsive {position: relative;}
+  ul.topnav.responsive li.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  ul.topnav.responsive li {
+    float: none;
+    display: inline;
+  }
+  ul.topnav.responsive li a {
+    display: block;
+    text-align: left;
+  }
+  /* nav end */
+}  
