--- a/app/views/photos/_form.html.haml
+++ b/app/views/photos/_form.html.haml
@@ -1,12 +1,13 @@
-!!!
 %nav
-  %ul.topnav
+  %ul#myTopnav.topnav
     %li.to_new
       = link_to "New Photo", new_photo_path, class: "new_photo"
     %li.to_photo
       = link_to "Photos", photos_path
     %li.to_tag
       = link_to "Tags", tags_path
+    %li.icon
+      %a{:href => "javascript:void(0);", :onclick => "myFunction()"} &#9776  
 = form_for(@photo) do |f|
   .form
     %ul.errors
