--- a/app/views/tags/show.html.haml
+++ b/app/views/tags/show.html.haml
@@ -1,8 +1,9 @@
+!!!
 %meta{:content => "width=device-width, initial-scale=1", :name => "viewport"}/
 %h1.newh1
   Photos with #{@tag.name}
 %nav
-  %ul.topnav
+  %ul#myTopnav.topnav
     %li.to_new
       = link_to "New Photo", new_photo_path, class: "new_photo"
     %li |
